--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 body{
     background-color:#91d18b;
-}
+    overflow: hidden;
+ }
 #result{
     color:#3b5249;
     font-family: 'Bangers', cursive;
